feat(servers): added list view servers
Signed-off-by: Ivan Del Pino <idelpino@teclib.com>

--- a/app/src/main/res/xml/global_parameters.xml
+++ b/app/src/main/res/xml/global_parameters.xml
@@ -24,9 +24,9 @@
 
     <PreferenceCategory android:title="@string/GlobalCatSet"/>
 
-    <Preference android:title="Open List"
+    <Preference android:title="Open List Servers"
         android:key="@string/buttonListServer"
-        android:summary="Open List Servers">
+        android:summary="">
         <intent
             android:action="android.intent.action.VIEW"
             android:targetPackage="org.flyve.inventory.agent"
