--- a/app/src/main/res/layout/activity_list_servers.xml
+++ b/app/src/main/res/layout/activity_list_servers.xml
@@ -7,6 +7,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:minHeight="?android:attr/actionBarSize">
 
         <RelativeLayout
@@ -20,8 +21,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:text="@string/list_servers"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/addServer"
@@ -38,6 +40,22 @@
         android:id="@+id/recyclerListServer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toolbar" />
+        android:layout_below="@+id/toolbar"
+        android:visibility="gone" />
+
+    <RelativeLayout
+        android:id="@+id/containerNoServer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="@string/no_servers_added"
+            android:textSize="40sp" />
+    </RelativeLayout>
 
 </RelativeLayout>
