fix(icon): change icon jpg by background color
Signed-off-by: Ivan Del Pino <idelpino@teclib.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
 	<color name="blue">#4073B9</color>
 	<color name="snackbar_action_fail">#ffff7663</color>
 	<color name="snackbar_action_good">#13988A</color>
+	<color name="icon_back_color">#2B8F8C</color>
 </resources>
