--- a/_includes/contact/social.html
+++ b/_includes/contact/social.html
@@ -46,7 +46,7 @@
 
     <a
       class="btn share-bar__twitter"
-      href="{{ site.twitter }}"
+      href="https://twitter.com/flyvemdm"
       title="Send us a Tweet"
     >
       <i class="fab fa-3x fa-twitter"></i>
