--- a/app/src/main/res/layout/list_item_inventory_child.xml
+++ b/app/src/main/res/layout/list_item_inventory_child.xml
@@ -36,7 +36,10 @@
         android:fontFamily="sans-serif"
         android:text=""
         android:textColor="@color/gray"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textIsSelectable="true"
+        android:focusable="true"
+        android:longClickable="true" />
 
     <View
         android:id="@+id/viewSeparatorBottom"
