fix(gh-page): fix url
Signed-off-by: Stanislas <skita@teclib.com>

--- a/_includes/contact/social.html
+++ b/_includes/contact/social.html
@@ -6,7 +6,7 @@
   <div class="share-bar">
     <a
       class="btn share-bar__telegram"
-      href="https://t.me/flyvemdm"
+      href="https://t.me/glpien"
       title="Message us on Telegram"
     >
       <i class="fab fa-3x fa-telegram"></i>
@@ -16,7 +16,7 @@
 
     <a
       class="btn share-bar__irc"
-      href="http://webchat.freenode.net/?channels=flyve-mdm"
+      href="http://webchat.freenode.net/?channels=glpi"
       title="Chat with us on IRC"
     >
       <i class="far fa-3x fa-comment-alt"></i>
@@ -26,7 +26,7 @@
 
     <a
       class="btn share-bar__reddit"
-      href="https://www.reddit.com/r/FlyveMDM/"
+      href="https://www.reddit.com/r/glpi/"
       title="Message us on Reddit"
     >
       <i class="fab fa-3x fa-reddit-alien"></i>
@@ -36,7 +36,7 @@
 
     <a
       class="btn share-bar__facebook"
-      href="https://www.facebook.com/FlyveMDM/"
+      href="https://www.facebook.com/glpiproject/"
       title="Contact us on Facebook"
     >
       <i class="fab fa-3x fa-facebook"></i>
@@ -46,7 +46,7 @@
 
     <a
       class="btn share-bar__twitter"
-      href="https://twitter.com/flyvemdm"
+      href="https://twitter.com/glpi_project"
       title="Send us a Tweet"
     >
       <i class="fab fa-3x fa-twitter"></i>
@@ -54,14 +54,5 @@
       <span>Twitter</span>
     </a>
 
-    <a
-      class="btn share-bar__google-plus"
-      href="https://plus.google.com/collection/c32TsB"
-      title="Follow us on Google+"
-    >
-      <i class="fab fa-3x fa-google-plus-g"></i>
-      <br/>
-      <span>Google+</span>
-    </a>
   </div>
 </div>
