--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,7 +15,7 @@ layout: default
       </span>
     {% else %}
       <span class="sub-header__text-primary">
-        More products of Flyve MDM
+        More products of GLPI
       </span>
     {% endif %}
   </div>
