--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,14 +5,21 @@
     android:layout_height="match_parent"
     >
 
+    <View android:id="@+id/strut"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerVertical="true"/>
+
+
     <ImageView
         android:id="@+id/imgInventory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/logoinventory"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_alignBottom="@+id/strut"
         />
+
 
     <ImageView
         android:id="@+id/imgLogoTeclib"
