fix(style): change style

--- a/css/coverage.css
+++ b/css/coverage.css
@@ -217,5 +217,5 @@ table.coverage tfoot td.ctr2 {
 .bar > img[src="../resources/greenbar.gif"] {
   height: 0;
   padding: 2px;
-  background: #158784;
+  background: #00a4f7;
 }
