fix(gh-pages): update screenshot
Signed-off-by: Teclib <skita@teclib.com>

--- a/_includes/contact/cards.html
+++ b/_includes/contact/cards.html
@@ -6,9 +6,9 @@
       Teclib' Address
     </h4>
 
-    <a href="https://goo.gl/maps/qDijeVyCUwq" target="_blank">
+    <a href="https://goo.gl/maps/iYVfBdPrEL2nEW9g6" target="_blank">
       <p>
-        08036 Barcelona
+        75001 Paris
       </p>
     </a>
   </div>
@@ -18,9 +18,9 @@
 
     <h4>Phone</h4>
 
-    <a href="tel:+34512702140">
+    <a href="tel:+33179970278">
       <p>
-        +34 512 702 140
+        +33 1 79 97 02 78
       </p>
     </a>
   </div>
