fix(gh-pages): update style / licence
Signed-off-by: Teclib <skita@teclib.com>

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,7 @@
   <meta name="description" content="{{ page.excerpt | default: site.github.project_tagline | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <meta name="og:description" content="{{ page.excerpt | default: site.github.project_tagline | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
-  <meta name="theme-color" content="#158784">
+  <meta name="theme-color" content="#00a4f7">
 
   {% if page.layout == 'codeDocumentation' %}
     <link rel="stylesheet" href="{{ 'css/codeDocumentation.css' | absolute_url }}" />
