--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,11 +16,11 @@
 
             <div class="navbar__logo">
               <a
-                href="https://flyve-mdm.com/"
+                href="https://glpi-project.org/"
                 class="navbar__logo--first"
               >
 
-                {% include image-WebP.html img="images/typo.png" alt="Flyve MDM" %}
+                {% include image-WebP.html img="images/typo.png" alt="GLPI" %}
 
               </a>
 
