--- a/_sass/3_level_generic/winstrap/ravada/_colors.scss
+++ b/_sass/3_level_generic/winstrap/ravada/_colors.scss
@@ -13,7 +13,7 @@
 
 // Base colors
 $color-gray:                        #363636;
-$color-accent:                      #158784 !default;
+$color-accent:                      #00a4f7 !default;
 $color-alert:                       #d02e00 !default;
 $color-white:                       #fff;
 
