--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -18,7 +18,7 @@
 		android:orientation="vertical"
 		>
 
-		<android.support.v7.widget.Toolbar
+		<androidx.appcompat.widget.Toolbar
 			xmlns:android="http://schemas.android.com/apk/res/android"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
 			android:background="@color/colorAccent"
 			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-		</android.support.v7.widget.Toolbar>
+		</androidx.appcompat.widget.Toolbar>
 
 		<FrameLayout
 			android:layout_width="match_parent"
@@ -53,7 +53,7 @@
 					android:textColor="@color/colorAccent"
 					android:visibility="invisible" />
 
-				<android.support.design.widget.FloatingActionButton
+				<com.google.android.material.floatingactionbutton.FloatingActionButton
 					android:id="@+id/btn_scheduler"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
@@ -93,7 +93,7 @@
 					android:visibility="invisible" />
 
 
-				<android.support.design.widget.FloatingActionButton
+				<com.google.android.material.floatingactionbutton.FloatingActionButton
 					android:id="@+id/btn_settings"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
@@ -118,7 +118,7 @@
 				android:orientation="vertical"
 				android:gravity="right">
 
-				<android.support.design.widget.FloatingActionButton
+				<com.google.android.material.floatingactionbutton.FloatingActionButton
 					android:id="@+id/fab"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
@@ -145,7 +145,7 @@
 
 	</LinearLayout>
 
-	<android.support.design.widget.NavigationView
+	<com.google.android.material.navigation.NavigationView
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="wrap_content"
@@ -179,8 +179,8 @@
         android:divider="@null"
         />
 </LinearLayout>
-</android.support.design.widget.NavigationView>
+</com.google.android.material.navigation.NavigationView>
 
 
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
