--- a/app/src/main/res/layout/list_item_servers.xml
+++ b/app/src/main/res/layout/list_item_servers.xml
@@ -8,7 +8,7 @@
         android:id="@+id/viewSeparator"
         style="@style/LineSeparator" />
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/containerServer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
         android:id="@+id/viewSeparatorBottom"
