refactor(code): comment some code
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/res/xml/global_parameters.xml
+++ b/app/src/main/res/xml/global_parameters.xml
@@ -40,7 +40,7 @@
            android:targetPackage="org.glpi.inventory.agent" />
    </Preference>
 
-   <PreferenceCategory
+   <!--<PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/AccueilPrivacyTitle" />
 
@@ -60,7 +60,7 @@
        android:summaryOff="@string/AccueilAnonymousDataSummaryOff"
        android:summaryOn="@string/AccueilAnonymousDataSummaryOn"
        android:title="@string/AccueilAnonymousDataTitle"
-       android:widgetLayout="@layout/custom_checkbox"/>
+       android:widgetLayout="@layout/custom_checkbox"/>-->
 
    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
