--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -54,6 +54,21 @@
         android:layout_centerVertical="true"
         android:visibility="visible" />
 
+
+    <TextView
+        android:id="@+id/text_options"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="10dp"
+        android:hint="@string/Share"
+        android:layout_marginBottom="116dp"
+        android:background="@android:color/transparent"
+        android:padding="8dp"
+        android:labelFor="@id/btnShare"
+        android:textColor="@color/colorAccent"
+        android:visibility="invisible" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnShare"
         android:layout_width="wrap_content"
