feat(core): add QR code scanner to add servers informations
Signed-off-by: Teclib <skita@teclib.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,14 @@
 	<color name="snackbar_action_fail">#ffff7663</color>
 	<color name="snackbar_action_good">#00a6f4</color>
 	<color name="icon_back_color">#00a6f4</color>
+
+	<!-- scanner -->
+	<color name="scan_mask">#60000000</color>
+	<color name="scan_laser">#cc0000</color>
+	<color name="scan_dot">#ff6600</color>
+	<color name="scan_result_view">#b0000000</color>
+	<color name="scan_result_dots">#c099cc00</color>
+
+	<color name="bg_dialog_title">@android:color/transparent</color>
+
 </resources>
