--- a/app/src/main/res/layout/activity_detail_server.xml
+++ b/app/src/main/res/layout/activity_detail_server.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fbutton="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
@@ -49,6 +51,7 @@
         android:divider="@drawable/empty_tall_divider"
         android:orientation="vertical"
         android:padding="15dp"
+        android:id="@+id/linear"
         android:showDividers="middle">
 
         <EditText
@@ -79,6 +82,18 @@
             android:hint="@string/password"
             android:inputType="textPassword" />
     </LinearLayout>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnQRScan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_below="@+id/linear"
+        android:src="@drawable/ic_qr"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="@color/colorAccent" />
+
 
     <Button
         android:id="@+id/actionServer"
